# one-day-one-quote-bot

./: .dockerignore  .gitignore  Makefile  MakefileForVDS  README.md  docker-compose-production-build.yaml  docker-compose-production-load.yaml  docker-compose.yaml  entrypoint.sh  entrypoint_schedule.sh  launcher.py  main.py  pyproject.toml  schedule_main.py
alembic/: env.py
app/: settings.py
app/models/: abstract_models.py  models.py
app/services/: app_logger.py  ask_db.py  database.py  dq_queryes.py  dto.py  first_fill_data.py  get_traceback.py  log_assistant.py
docker/app/: Dockerfile
docker/production/: bot-app.dockerfile  schedule-app.dockerfile
